# kafka-gov

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REFACTORING_SUMMARY.md  SETUP_REACT.md  decisions.md  docker-compose.yml  generate_encryption_key.py  issues.md  job.md  kafka-compose.yml  pyproject.toml  requirements.txt  run_consumer_tests.sh  run_tests.sh  test.txt  test.yml  test_policy_simple.py  test_validation.py
.github/workflows/: ci.yml
.sisyphus/plans/: cli-preflight-mvp.md
app/: AGENTS.md  celery_app.py  container.py  main.py
app/analysis/: README.md  __init__.py  container.py
app/audit/: __init__.py
app/catalog/: types.py
app/cluster/: README.md  container.py
app/connect/: README.md  container.py
app/consumer/: README.md  container.py
app/contract/: types.py
app/governance/: types.py
app/lineage/: types.py
app/policy/: __init__.py  container.py
app/product/: types.py
app/registry_connections/: README.md  container.py
app/schema/: README.md  __init__.py  container.py
app/shared/: README.md  __init__.py  actor.py  approval.py  auth.py  cache.py  constants.py  container.py  database.py  error_handlers.py  exceptions.py  logging_config.py  middleware.py  roles.py  settings.py  types.py
app/tasks/: metrics_tasks.py
app/topic/: README.md  container.py
docker/: docker-compose-mysql.yml
docs/: CONSUMER_METRICS.md  PRODUCTION_SETUP.md  ROADMAP.md  current-system-analysis.md  index.md  topic-removal-review.md
docs/architecture/: current-state-analysis.md  current-system-analysis.md  overview.md
docs/cli/: preflight-contract.md  preflight-mvp.md
docs/features/: batch-operations.md  overview.md  real-time-data-governance-system.md  topic-management.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/operations/: deployment.md
docs/qa/: schema-governance-qa-scenarios.md
docs/schema_registry/: implementation-plan.md  (+2 more)
example/: batch_topics.yml  custom_strategy_example.yml
frontend/: .env.example  .env.production  AGENTS.md  Dockerfile  TROUBLESHOOTING.md  nginx-simple.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
migrations/: env.py
nginx/: Dockerfile  nginx.conf
promp/: architecture.md  job.md
script/: migrate.sh
static/: connect.html  index.html  settings.html
tests/: AGENTS.md  conftest.py  domain_case_factory.py  factories.py  helpers.py  mocks.py  test_apply_approval_request_integration.py  test_catalog_sync_service.py  test_celery_app.py  test_cluster_domain_entities.py  test_consumer_domain_models.py  test_domain_mock_matrix.py  test_e2e_container_api.py  test_e2e_full_system.py  test_e2e_schema_governance_api.py  test_e2e_schema_governance_ui.py  test_env_mismatch.py  test_example.py  test_governance_operations_routes.py  test_interface_schema.py  test_preflight_actor_context.py  test_preflight_apply_plan_parity.py  test_preflight_cli_command_tree_scope.py  test_preflight_cli_error_classification.py  test_preflight_cli_input_contract.py  test_preflight_cli_policy_metadata.py  test_preflight_contract_snapshots.py  test_preflight_policy_pack.py  test_preflight_result_translator.py  test_preflight_schema_cli_integration.py  test_preflight_schema_contract_snapshots.py  test_preflight_topic_cli_integration.py  test_refactoring.py  test_runtime_surface_analysis.py  test_schema_compare_routes.py  test_schema_domain_models.py  test_schema_drift_routes.py  test_schema_drift_use_case.py  test_schema_governance_stats_use_case.py  test_schema_known_topic_names.py  (+13 more)
(+675 files in other folders)
